hphp/test/slow/constants/concrete_concrete_conflict1.php.expectf
Fatal error: C cannot inherit the type constant T from I, because it was previously inherited from A in %s/constants/concrete_concrete_conflict1.php on line 11
